.travis.yml updated

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,14 @@ cache:
     - npm ci
     - npm run cy:verify
 
+install:
+      - npm ci
+
 defaults: &defaults
   script:
     #   ## print all Travis environment variables for debugging
     - $(npm bin)/print-env TRAVIS
+    - $(npm bin)/cypress run --record
     - npm start -- --silent &
     - npm run cy:run -- --record --parallel --group $STAGE_NAME
     # after all tests finish running we need
